--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -1,6 +1,4 @@
-body {
-    background-color: lightblue;
-}
-h4 {
-    color: red;
+#navbar_wf {
+    background-color: orangered;
+    border-color: orange;
 }
