--- a/src/main/resources/templates/home/homeSignedIn.html
+++ b/src/main/resources/templates/home/homeSignedIn.html
@@ -3,10 +3,10 @@
 <head>
     <title th:text="#{view.index.title}">Welcome!</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link href="../../css/bootstrap.min.css" rel="stylesheet" media="screen" th:href="@{/resources/css/bootstrap.min.css}"/>
-    <link href="../../css/core.css" rel="stylesheet" media="screen" th:href="@{/resources/css/core.css}" />
-    <script src="../../js/jquery.min.js" th:src="@{/resources/js/jquery.min.js}"></script>
-    <script src="../../js/bootstrap.min.js" th:src="@{/resources/js/bootstrap.min.js}"></script>
+    <link rel="stylesheet" type="text/css" media="all"  th:href="@{/css/bootstrap.min.css}"  href="../../css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" media="all"  th:href="@{/css/core.css}"  href="../../css/core.css" />
+    <script src="../../js/jquery.min.js" th:src="@{/js/jquery.min.js}"></script>
+    <script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
 </head>
 <body>
 <div th:replace="fragments/header :: header">&nbsp;</div>
