--- a/src/main/resources/templates/signin/signin.html
+++ b/src/main/resources/templates/signin/signin.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" media="all"  th:href="@{/css/core.css}"  href="../../css/core.css" />
 </head>
 <body>
+<div th:replace="~{fragments/header :: header}">Header</div>
 <form class="form-narrow form-horizontal" action="#" method="post" th:action="@{/authenticate}">
     <th:block th:if="${param.error != null}">
         <div th:replace="fragments/alert :: alert (type='danger', message='Sign in error. Please try again.')">Alert</div>
@@ -46,5 +47,6 @@
         </div>
     </fieldset>
 </form>
+<div th:insert="~{fragments/footer :: footer}">&copy; 2021 Inner Sourcing Platform</div>
 </body>
 </html>
